# pdf2exam

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: create-release.yml
pdf/: .env.example  .gitignore  README.md  eq_chapter.py  eq_cli.py  eq_common.py  eq_extract.py  eq_io.py  eq_models.py  eq_normalize.py  eq_output.py  eq_process.py  eq_settings.py  extract_questions.py  fitz.pyi  pyproject.toml  split_pdf.py  uv.toml
public/: questions.json
public/subjects/: index.json  专利法-600.json  专利法.json  相关法-600.json  相关法.json
scripts/: generate-keystore.sh
src/: App.vue  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DirectoryIndicator.vue  FilterDrawer.vue  OptionSelector.vue  ProgressBar.vue  QuestionCard.vue  ScoreSummary.vue  SyncDialog.vue
src/composables/: useExam.ts  usePractice.ts
src/lib/: tauri.ts
src/router/: index.ts
src/stores/: questionBank.ts  wrongQuestions.ts
src/types/: question.ts  shims-tauri.d.ts
src/views/: ExamResults.vue  Home.vue  MockExam.vue  QuestionReview.vue  SequentialPractice.vue  SyncConfig.vue  WrongReview.vue
