[project]
name = "pdf-question-extractor"
version = "0.1.0"
description = "PDF 题库导入与自动组卷 - 题目提取工具"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "natsort>=8.4.0",
    "typer>=0.9.0",
    "pymupdf>=1.23.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = false
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
