[package]
name = "pdf2exam"
version = "0.1.0"
description = "A PDF exam question extractor app"
authors = ["you"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "pdf2exam"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt"] }
